fdo#36874: Label PRINTING misplaced on paper sheet